--- a/templates/blog/header.html
+++ b/templates/blog/header.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <header class="myheader">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand brand-name" href="#">lwd3737's Blog</a>
@@ -7,20 +8,23 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav nav-right ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Project</a>
+        <li class="nav-item dropdown">
+          <a class="dropdown-toggle" href="#" role="button" id="profileMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img src="{% static 'icon/user-circle-solid.svg' %}" width="35px" alt="">
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="profileMenu">
+            <a class="dropdown-item" href="{% url 'blog:article_new' %}">New Article</a>
+            <a class="dropdown-item" href="{% url 'blog:my_articles' %}">My Article</a>
+          </div>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
   </nav>
 </header>
