--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -36,10 +36,28 @@
   padding:10px 20px 20px 10px;
 }
 
+.post-content h1, .post-content h2, .post-content h3{
+  margin:0;
+  padding:5px;
+}
+
 .blog-anchor{
   text-indent:20px;
-  font-size:14px;
+  font-size:15px;
+  padding:150px 0 0 60px;
   margin-bottom:30px;
+  position:sticky;
+  top:20px;
+  right:10px;
+}
+
+.blog-anchor li{
+  margin-bottom: 5px;
+}
+
+.blog-anchor .anchor-link{
+  margin-left:20px;
+  color: gray;
 }
 
 .article-tag{
@@ -72,11 +90,7 @@
   margin-bottom:10px;
 }
 
-.article-tag ul li:nth-of-type(1){background:#4595e7;}
-.article_tag ul li:nth-of-type(2){background:#e7458d;}
-.article_tag ul li:nth-of-type(3){background:#e79545;}
-.article_tag ul li:nth-of-type(4){background:#1dd06d;}
-.article_tag ul li:nth-of-type(5){background:#333;}
+.article-tag ul li{background:#e9ecef;}
 
 hr{
   width:90%;
@@ -85,6 +99,7 @@ hr{
   border-top: 1px solid #eeeeee;
   border-bottom:1px solid rgba(255, 255, 255, 0.8);
 }
+
 
 .comment-toggle:hover{
   cursor:pointer;
