--- a/templates/base.html
+++ b/templates/base.html
@@ -15,14 +15,12 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/swiper.css' %}">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}?ver=2">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}?ver=1">
     {% block extra_style %}
     {% endblock %}
 
     <!--JS-->
     <script type="text/javascript" src="{% static 'js/jquery.3.4.1.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/swiper.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.bundle.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/utility.js' %}?ver=1">
     </script>
@@ -35,9 +33,13 @@
       {% endblock %}
     </div>
 
-    {% include 'blog/right.html' %}
+    <aside class="right">
+      {% block right %}
+      {% endblock %}
+    </aside>
 
-    {% include 'blog/footer.html' %}
+    {% block footer %}
+    {% endblock %}
 
     {% block extra_js %}
     {% endblock %}
