article 편집, 수정, tag 검색, 인기 tag header 추가, tag 더보기, celery로 article 인기 평가 계산하기, home UI 개선

--- a/static/css/article_form.css
+++ b/static/css/article_form.css
@@ -7,6 +7,10 @@
   border:none;
 }
 
+.article-form textarea:focus{
+  outline:none;
+}
+
 .form-item{
   border-bottom:1px solid rgba(0,0,0,0.1);
   padding-bottom:7px;
@@ -41,9 +45,25 @@
   overflow:hidden;
 }
 
+.tag-list{
+  width:150px;
+}
+
+.box-ui{
+  padding:10px 0 !important;
+}
+
+.tag-list .tag-item{
+  padding:0 7px;
+}
+
+.tag-list .tag-item:hover{
+  cursor:pointer;
+  background:rgba(0,0,0,0.15);
+}
+
 .added-tags{
   margin-top: 20px;
-
 }
 
 .added-tag{
