--- a/templates/blog/header.html
+++ b/templates/blog/header.html
@@ -1,17 +1,20 @@
 {% load staticfiles %}
 <header class="myheader">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand brand-name" href="#">lwd3737's Blog</a>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand brand-name" href="{% url 'blog:index' %}">Lwd's Blog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav nav-right ml-auto">
-        <li class="nav-item">
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <li class="search nav-item">
+          <form method="GET" action="{% url 'blog:search' %}" class=" form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" name="word" placeholder="검색" aria-label="Search">
+            <div class="submit-btn">
+              <img width="20px" height=""src="{% static 'icon/search-solid.svg' %}" alt="">
+            </div>
+            <input class="hidden-submit" type="submit">
           </form>
         </li>
         <li class="nav-item dropdown">
