--- a/static/css/comment.css
+++ b/static/css/comment.css
@@ -16,6 +16,11 @@
   background:white;
 }
 
+.comment-item-wrapper{
+  border-bottom:1px solid rgba(0,0,0,0.1);
+  margin-bottom:15px;
+}
+
 .comment-item{
   padding:10px 20px;
 }
