--- a/templates/blog/article_new.html
+++ b/templates/blog/article_new.html
@@ -63,6 +63,10 @@
 </div>
 {% endblock %}
 
+{% block right %}
+{% endblock %}
+
+
 {% block extra_js %}
 <script type="text/javascript" src="{% static 'js/article_new.js '%}?ver=2"></script>
 {% endblock %}
