--- a/templates/blog/my_articles.html
+++ b/templates/blog/my_articles.html
@@ -85,6 +85,10 @@
 </div>
 {% endblock %}
 
+{% block right %}
+{% endblock %}
+
+
 {% block extra_js %}
 <script type="text/javascript">
   window.onload = ev => {
