--- a/static/css/base.css
+++ b/static/css/base.css
@@ -114,6 +114,10 @@ article h3{
   margin-right:20px;
 }
 
+.nav-right li a{
+  font-size:15px;
+}
+
 .search input{
   border-radius: 30px;
   height:30px
@@ -125,6 +129,10 @@ article h3{
 
 .search .hidden-submit{
   display:none;
+}
+
+#signup{
+  margin-right:25px;
 }
 
 /*mysection*/
@@ -206,7 +214,10 @@ nav.most-popular-tags{
   padding-bottom:11px;
   text-indent:0;
   white-space:nowrap;
-  text-overflow:ellipsis;
+  overflow: hidden;
+}
+
+.article-title a{
 }
 
 .article p{
@@ -259,10 +270,12 @@ nav.most-popular-tags{
   width:55%;
   height:100%;
   padding: 20px 20px;
+  overflow: ellipsis;
 }
 
 #popular-article-1 .article-title{
-  font-size:35px;
+  font-size:28px;
+  text-overflow: ellipsis;
 }
 
 #popular-article-1 .article-digest{
@@ -284,6 +297,75 @@ nav.most-popular-tags{
 aside.right{
   width:35%;
   float:right;
+  padding:0 0 0 40px;
+}
+aside.right > *{
+  margin-bottom:60px;
 }
 
-/*footer*/
+.news-title{
+  font-size:20px;
+  font-weight: bold;
+}
+
+.corona-news{
+  background: rgba(0,0,0,0.05);
+  border-radius: 8px;
+  padding:20px 30px;
+}
+
+.topic-title{
+  margin-bottom:15px;
+}
+
+.today-live-num{
+  display:flex;
+  margin-bottom:10px;
+  font-size:18px;
+  font-weight: lighter;
+}
+
+.today-live-num strong{
+  font-weight: bold;
+}
+
+.today-live-num .data-item:first-child{
+  margin-right:30px;
+}
+
+.live-nums .data-item{
+  display:flex;
+  justify-content: space-between;
+}
+
+.live-nums .data{
+  display:flex;
+}
+
+.live-nums .title{
+}
+
+.live-nums .num{
+  margin-right:10px;
+}
+
+.live-nums .before{
+  padding-top:3px;
+}
+
+.reading-item{
+  margin-bottom:20px;
+}
+
+.reading-list .title{
+  font-weight: bold;
+  margin-bottom:30px;
+}
+
+.reading-tiem h6{
+  font-size:16px;
+}
+
+.reading-item small{
+  color:gray;
+}
